--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,14 @@
     "mongoose": "^9.0.1",
     "nodemon": "^3.1.11",
     "save-dev": "^0.0.1-security",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6"
+    "@types/express": "^5.0.6",
+    "@types/socket.io": "^3.0.1"
   }
 }
